fix(wanderlog): make guide zoom into location and center map button visible

--- a/styles/wanderlog/catppuccin.user.less
+++ b/styles/wanderlog/catppuccin.user.less
@@ -2991,6 +2991,22 @@
       }
     }
 
+    // Zoom into location and center map button
+    .MapGLMapWithMarkers__fitButtons .Button__translucent-black {
+      // NOTE: As these buttons use .Button__translucent-black which has its background set to transparent, we need to add a background back
+      background-color: fade(@base, 90%);
+
+      &:not(.Button__disabled):hover,
+      &:not(.Button__disabled):active,
+      &:not(.Button__disabled).Button__focused {
+        background-color: @base;
+        border-color: transparent;
+        .Button__icon {
+          color: @text;
+        }
+      }
+    }
+
     // Photo gallery
     .lg-counter {
       color: @subtext0;
